JS-39: Add languages selection in user profile view

--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -92,6 +92,10 @@ $ms-item-text-color: #ffffff;
     .drop-down-arrow {
       background-color: unset;
       cursor: not-allowed;
+
+      .icon-ic-arrow-bottom {
+        background-color: $disabled-background-color;
+      }
     }
 
     .autocomplete-dropdown-container {
