--- a/app/views/user/user-profile/user-profile.component.scss
+++ b/app/views/user/user-profile/user-profile.component.scss
@@ -71,31 +71,19 @@
     }
   }
 
-  .form-group {
+  .icon-ic-paper,
+  .icon-ic-user3,
+  .icon-ic-star,
+  .icon-ic-education,
+  .icon-ic-tool {
     position: relative;
-  }
-  .form-group:before {
-    position: absolute;
-    font-family: fontello;
-    left: -35px;
-    font-size: 20px;
-    color: $color-gray-2;
-  }
 
-  .presentation:before {
-    content: '\e823';
-  }
-  .languages:before {
-    content: '\e824';
-  }
-  .work-experience:before {
-    content: '\e820';
-  }
-  .education:before {
-    content: '\e825'
-  }
-  .skills:before {
-    content: '\e821';
+    &:before {
+      position: absolute;
+      left: -35px;
+      font-size: 20px;
+      color: $color-gray-2;
+    }
   }
 
   hr {
