--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,37 +1,54 @@
 <div class="menu-side-bar" (click)="onBodyClick($event)" [hidden]="!isNavigationMenuVisible">
   <div class="overbody-container"></div>
   <div class="menu-container table">
-    <div class="nav-menu table-cell">
-      <div class="nav-menu-icon-container"><i class="icon-ic-just-arrived-logo"></i></div>
-      <div class="nav-menu-item-container">
-        <div class="nav-menu-item"><a class="nav-menu-link nav-my-job" href="">{{'menu.main.my_assignment' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-job-list" href="">{{'menu.main.find_assignment' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-job-create" href="">{{'menu.main.create_assignment' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-faq" href="">{{'menu.main.faq' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-contact" href="">{{'menu.main.contact' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-profile" href="">{{'profile' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-signin" href="">{{'menu.main.login' | translate}}</a></div>
-        <div class="nav-menu-item"><a class="nav-menu-link nav-signout" href="">{{'menu.main.logout' | translate}}</a></div>
+    <div class="table-row">
+      <div class="nav-menu table-cell">
+        <div class="nav-menu-icon-container"><i class="icon-ic-just-arrived-logo"></i></div>
+        <div class="nav-menu-item-container">
+          <div class="nav-menu-item"><a class="nav-menu-link nav-my-job" href="">{{'menu.main.my_assignment' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-job-list" href="">{{'menu.main.find_assignment' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-job-create" href="">{{'menu.main.create_assignment' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-faq" href="">{{'menu.main.faq' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-contact" href="">{{'menu.main.contact' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-profile" href="">{{'profile' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-signin" href="">{{'menu.main.login' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-signout" href="">{{'menu.main.logout' | translate}}</a></div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="table" *ngIf="!!user">
     <div class="table-row">
-      <div class="table-cell">
-        <!--&lt;!&ndash;<span><span class="user-info-image" back-img="{{ctrl.user.data.user_image}}"></span></span>&ndash;&gt; TODO: add profile image-->
-        <span>{{user.firstName}} {{user.lastName}}</span>
-      </div>
-      <div class="table-cell"><i class="demo-icon icon-ic-settings"></i></div>
+      <div class="table-cell">test</div>
     </div>
   </div>
 </div>
-<div class="menu-side-bar" [hidden]="true">
+<div class="menu-side-bar" [hidden]="!isLanguageMenuVisible" (click)="onBodyClick($event)">
   <div class="overbody-container"></div>
   <div class="menu-container language-menu-container">
     <div class="just-arrived-logo-container text-center">
       <img class="language-logo-img" src="app/assets/images/logo.svg" alt="Just Arrived"/>
     </div>
     <div class="select-language-header-text text-center fs-xl">{{ 'menu.language.title' | translate }}</div>
+    <div class="select-language-container text-center">
+      <div *ngFor="let language of systemLanguages" class="language-button-container no-select clickable" (click)="onSelectLanguage(language)">
+        <div class="language-code">
+          {{language.languageCode}}
+        </div>
+        <div class="language-text">{{language.localName}}</div>
+      </div>
+
+    </div>
+    <div class="language-information text-center">
+      <p>{{ 'menu.language.text_1' | translate }}</p>
+      <p>{{ 'menu.language.text_2' | translate }}</p>
+    </div>
+    <div class="credentials">
+      <p class="prominent">{{ 'menu.language.translation_by_probono' | translate }}:</p>
+      <img src="app/assets/images/menu_semantix_logo.png" alt="Semantix"/>
+      <img src="app/assets/images/menu_skrivasbyra_logo.png" alt="Stockholms.Skrivbyrå"/>
+      <p class="start_name">Farshid Fadaee</p>
+      <p>Nick Chipperfield</p>
+      <p>Hans-Erik Täpp</p>
+    </div>
   </div>
 </div>
 <header class="table header">
@@ -51,13 +68,13 @@
       </div>
     </div>
     <div class="table-cell">
-      <div>
-        <button ng-click="ctrl.selectLanguage()" type="button"><span class="lang-icon">langCode</span><span
-          class="lang-text">localName</span></button>
-      </div>
+        <div (click)="onLanguageMenuButtonClick()">
+          <div class="nav-language-icon">{{selectedLanguage.languageCode}}</div>
+          <div class="nav-language-text">{{selectedLanguage.localName}}</div>
+        </div>
     </div>
     <div class="table-cell">
-      <div (click)="onMenuButtonClick()"><span class="menu-icon"><i></i><i></i><i></i></span><span class="menu-text">{{"common.menu" | translate}}</span></div>
+      <div (click)="onNavigationMenuButtonClick()"><span class="menu-icon"><i></i><i></i><i></i></span><span class="menu-text">{{"common.menu" | translate}}</span></div>
     </div>
   </div>
 </header>
