--- a/app/views/user/user-profile/user-profile.component.html
+++ b/app/views/user/user-profile/user-profile.component.html
@@ -45,21 +45,20 @@
         </autocomplete-dropdown>
 
         <div class="table max-width">
-          <div class="table-row" *ngFor="let language of userProfile.languages">
-            <div class="table-cell min-width-column">{{language.name}}</div>
+          <div class="table-row" *ngFor="let userLanguage of userProfile.userLanguages">
+            <div class="table-cell min-width-column">{{userLanguage.language.name}}</div>
             <div class="table-cell"></div>
             <div class="table-cell min-width-column">
               <autocomplete-dropdown [lookupType]="'list'" [enumList]="languageProficiencyLevels"
-                                     [(destination)]="language.proficiency"
+                                     [(destination)]="userLanguage.proficiency"
                                      [placeholder]="'language.proficiency.placeholder' | translate"
-                                     [autoSelectFirstOption]="true"
                                      [isDisabled]="!editMode"
                                      [autocompleteResultLabelFunction]="namePropertyLabel"
                                      [selectedItemLabelFunction]="namePropertyLabel">
               </autocomplete-dropdown>
             </div>
             <div class="table-cell"></div>
-            <div class="table-cell min-width-column clickable" *ngIf="editMode" (click)="onRemoveLanguage(language)">
+            <div class="table-cell min-width-column clickable" *ngIf="editMode" (click)="onRemoveUserLanguage(userLanguage)">
               <i class="icon-ic-close"></i>
             </div>
           </div>
