--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,7 +5,7 @@
       <div class="nav-menu table-cell">
         <div class="nav-menu-icon-container"><i class="icon-ic-just-arrived-logo"></i></div>
         <div class="nav-menu-item-container">
-          <div class="nav-menu-item"><a class="nav-menu-link nav-my-job" routerLink="/tasks">{{'menu.main.my_assignment' | translate}}</a></div>
+          <div class="nav-menu-item"><a class="nav-menu-link nav-my-job" routerLink="/about">{{'menu.main.my_assignment' | translate}}</a></div>
           <div class="nav-menu-item"><a class="nav-menu-link nav-job-list" href="">{{'menu.main.find_assignment' | translate}}</a></div>
           <div class="nav-menu-item"><a class="nav-menu-link nav-job-create" href="">{{'menu.main.create_assignment' | translate}}</a></div>
           <div class="nav-menu-item"><a class="nav-menu-link nav-faq" href="">{{'menu.main.faq' | translate}}</a></div>
@@ -56,7 +56,7 @@
     <div class="table-cell header-logo-container">
       <div class="table">
         <div class="table-row">
-          <div class="table-cell clickable back-button-container" *ngIf="states.length > 1 || currentState === '/home'" (click)="onBackButtonClick()">
+          <div class="table-cell clickable back-button-container" *ngIf="states.length > 1 && currentState !== '/home'" (click)="onBackButtonClick()">
             <i class="demo-icon icon-ic-arrow-left"></i>
           </div>
           <div class="table-cell app-logo-img-container">
