JS-40: Fix gulp build

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,6 @@
 @import 'variables.scss';
 @import 'mixins.scss';
-@import url("../assets/fonts/fontello.css");
+@import url("../../assets/fonts/fontello.css");
 
 body * {
   font-family: 'Open Sans', sans-serif;
