--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -255,6 +255,14 @@
       }
 
     }
+
+    .nav-menu-footer {
+      color: white;
+
+      .table-cell {
+        vertical-align: bottom;
+      }
+    }
   }
 }
 
