--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -261,6 +261,11 @@
 
       .table-cell {
         vertical-align: bottom;
+        padding: 20px;
+      }
+
+      .user-panel {
+
       }
     }
   }
