JS-4: Fix small css bug

--- a/app/components/slider/slider.component.scss
+++ b/app/components/slider/slider.component.scss
@@ -33,7 +33,7 @@
       border-radius: 0 0 5px 5px;
       height: 30px;
       line-height: 30px;
-      white-space: pre-wrap;
+      white-space: normal;
       padding: 0 2px;
     }
 
