JS-7: Add jobs view

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -13,7 +13,7 @@
             </a>
           </div>
           <div class="nav-menu-item clickable">
-            <a class="nav-menu-link" href="">
+            <a class="nav-menu-link" routerLink="/jobs">
               <i class="icon-ic-find-jobs"></i>
               {{'menu.main.find_assignment' | translate}}
             </a>
