--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -31,7 +31,7 @@
         {{'start.job_section.title' | translate}}
       </div>
       <div class="all-jobs-button-container">
-        <a href="#" class="fs-m0"><span>{{'common.show_all' | translate | uppercase}}</span></a>
+        <a routerLink="/jobs" class="fs-m0"><span>{{'common.show_all' | translate | uppercase}}</span></a>
         <i class="icon-ic-arrow-right"></i>
       </div>
     </div>
