JS-4: Fix header issues on firefox

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -73,7 +73,7 @@
   <div class="close-button icon-ic-close" (click)="isLanguageMenuVisible = false"></div>
   <div class="menu-container language-menu-container">
     <div class="just-arrived-logo-container text-center">
-      <img class="language-logo-img" src="assets/images/logo.svg" alt="Just Arrived"/>
+      <img class="language-logo-img" src="assets/images/logo.png" alt="Just Arrived"/>
     </div>
     <div class="select-language-header-text text-center fs-xl">{{'menu.language.title' | translate}}</div>
     <div class="select-language-container text-center">
@@ -107,7 +107,7 @@
           </div>
           <div class="table-cell app-logo-img-container">
             <a routerLink="/home">
-              <img class="app-logo-img" src="assets/images/logo.svg" alt="Just Arrived"/>
+              <img class="app-logo-img" src="assets/images/logo.png" alt="Just Arrived"/>
             </a>
           </div>
         </div>
