--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -126,7 +126,7 @@
     float: right;
     position: relative;
     z-index: 22;
-    min-height: 100%;
+    height: 100%;
 
 
     &.language-menu-container {
@@ -277,6 +277,12 @@
       .user-panel {
 
       }
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .menu-container {
+      width: 100%;
     }
   }
 }
